Fix for extra long content assist proposals not being properly displayed on Safari

--- a/bundles/org.eclipse.orion.client.editor/web/orion/editor/contentassist.css
+++ b/bundles/org.eclipse.orion.client.editor/web/orion/editor/contentassist.css
@@ -106,5 +106,10 @@
 
 .cloneWrapper {
 	display: block;
+	overflow: visible;
 	z-index: 1000; /* must be greater than .contentassist z-index */
+}
+
+.contentassist.cloneWrapper:hover {
+	overflow: visible;
 }
